fix heading and spacing

--- a/src/style/notion-x.scss
+++ b/src/style/notion-x.scss
@@ -40,14 +40,6 @@
   }
 }
 
-.m2it-prose {
-  h2,
-  h3 {
-    font-family: 'Recoleta', 'Arial', 'Helvetica', 'sans-serif' !important;
-    font-weight: normal !important;
-  }
-}
-
 .notion-brown_background {
   @apply bg-[#f4eeee];
 }
